--- a/beside/src/scss/var.scss
+++ b/beside/src/scss/var.scss
@@ -13,7 +13,7 @@ $white: #ffffff;
 //$gray-border: #c3c3c3;
 $gray-border: rgba(0,0,0, 0.5);
 $gray-dark: #73644b;
-
+$red: #c33e4b;
 // mixins 
 @mixin container {
     box-sizing: border-box;
@@ -53,4 +53,16 @@ $gray-dark: #73644b;
         color:$black;
         font-family: $font-subheading;
     }
+}
+
+@mixin text-form {
+    font-family: $font-subheading;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+@mixin margin-0-fieldset {
+    margin-left: 0px;
+    margin-right: 0px;
 }
