--- a/beside/src/scss/style.scss
+++ b/beside/src/scss/style.scss
@@ -29,6 +29,12 @@ body {
 @import 'components/shelter-filter.scss';
 
 @import 'components/positions.scss';
+
+//event and news
+@import 'components/event.scss';
+
+@import 'components/latest-news.scss';
+
 // footer
 
 @import 'components/page-footer.scss';
