beside - add working prototype of slider to welcome-screen

--- a/beside/src/scss/style.scss
+++ b/beside/src/scss/style.scss
@@ -16,6 +16,8 @@ body {
 
 @import 'components/welcome-screen.scss';
 
+@import 'components/welcome-slider.scss';
+
 @import 'components/arrow-down.scss';
 
 // page-main
