--- a/beside/src/scss/components/welcome-screen.scss
+++ b/beside/src/scss/components/welcome-screen.scss
@@ -20,4 +20,11 @@
     &__sub-header {
         font-weight: 700;
     }
+    
+    &__slider-wrapper {
+        width: 100%;
+        height: 200px;
+        border: 1px solid red;
+        margin-bottom: 35px;
+    }
 }
