beside - fix hover effects, done with png-sprite, fix header

--- a/beside/src/scss/components/arrow-down.scss
+++ b/beside/src/scss/components/arrow-down.scss
@@ -19,4 +19,10 @@
         margin-right: auto;
         margin-top: 15px;
     }
+    
+    &:hover,
+    &:focus {
+        text-decoration: underline;
+        color: $white;
+    }
 }
