--- a/beside/src/scss/components/contacts.scss
+++ b/beside/src/scss/components/contacts.scss
@@ -20,13 +20,12 @@
     
     h5 {
         margin-bottom: 0px;
-        
-        &:nth-first-of-type {
-        }
     }
     
-    a:hover {
+    a:hover,
+    a:focus {
         text-decoration: underline;
+        color: $white;
     }
     
     &__subscripton-form {
@@ -37,6 +36,7 @@
             background-color: transparent;
             border: 1px solid $gray-border;
             margin-bottom: 10px;
+            outline-color: white;
             @include input;
         }
         
@@ -48,6 +48,13 @@
             color: $white;
             border: none;
             text-transform: uppercase;
+            @include text-form;
+            
+                &:hover,
+                &:focus {
+                    background-color: $white;
+                    color: $black;
+                } 
         }
     }
 }
