--- a/beside/src/scss/components/page-header.scss
+++ b/beside/src/scss/components/page-header.scss
@@ -13,6 +13,19 @@
         
     }
     
+    &__logo {
+        display: block;
+        font-size: 0px;
+        width: 100px;
+        height: 80px;
+        padding-top: 10px;
+        padding-left: 10px;
+        
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    }
     
     &__nav-toggler-wrapper {
         position: relative;
