beside - add positions with hover effect and real content

--- a/beside/src/scss/components/latest-news.scss
+++ b/beside/src/scss/components/latest-news.scss
@@ -1,6 +1,7 @@
 .latest-news {
     &__inner {
         @include container;
+        border-top: none;
         padding-top: 15px;
         padding-bottom: 15px;
     }
