--- a/beside/src/scss/components/positions.scss
+++ b/beside/src/scss/components/positions.scss
@@ -3,28 +3,86 @@
         @include text-form;
     }
     
-    &__item {
-        margin-bottom: 90px;
+    &__item-info {
+        display: none;
+        position: absolute;
+        top: 90px;
+        left: 50%;
+        padding: 25px;
+        margin-left: -35px;
+        background-color: $black;
+        color: $white;
+        cursor: pointer;
+        @include text-form;
+        letter-spacing: 2px;
         
-        &:hover {
-            margin-bottom: 37px;
+        &:hover,
+        &:focus {
+            background-color: $yellow;
+        }
+        
+        &:after {
+            content: '';
+            display: block;
+            width: 35px;
+            height: 35px;
+            position: absolute;
+            top: 110px;
+            left: 50%;
+            margin-left: -17px;
+            background-image: url(../../img/icons-sprite.png);
+            background-repeat: no-repeat;
+            background-position-y: -60px;
         }
     }
     
+    &__item {
+        margin-bottom: 106px;
+        position: relative;
+        
+        &:hover,
+        &:focus {
+            margin-bottom: 16px;
+            border: 1px solid $gray-border;
+            
+            .positions__item-info {
+                display: block;
+            }
+            
+            .positions__item-img {
+                border-top: none;
+                border-left: none;
+                border-right: none;
+            }
+        }
+        
+        &:hover .positions__item-text-additional,
+        &:hover .positions__item-anchor{
+            display: block;
+        }
+    }
+    
+    
     &__item-text {
         display: block;
+        margin-bottom: 15px;
+        margin-left: 10px;
     }
     
     &__item-img {
-        width: 256px;
+        box-sizing: border-box;
+        width: 100%;
         height: 254px;
-        border: 1px solid gray;
+        border: 1px solid $gray-border;
         margin-bottom: 20px;
+        background-color: $gray-border;
     }
     
     &__item-text-additional {
         display: none;
         color: $red;
+        margin-bottom: 15px;
+        margin-left: 10px;
     }
     
     &__item-anchor {
@@ -32,6 +90,8 @@
         max-width: 93px;
         max-height: 36px;
         padding: 10px 15px;
+        margin-left: 10px;
+        margin-bottom: 20px;
         border: 1px solid $gray-border;
         @include text-form;
         text-decoration: none;
@@ -41,13 +101,6 @@
         &:hover,
         &:focus {
             background-color: $yellow;
-        }
-    }
-    
-    &__item {
-        &:hover .positions__item-text-additional,
-        &:hover .positions__item-anchor{
-            display: block;
         }
     }
     
