--- a/beside/src/scss/style.scss
+++ b/beside/src/scss/style.scss
@@ -35,6 +35,8 @@ body {
 //event and news
 @import 'components/event.scss';
 
+@import 'components/event-slider.scss';
+
 @import 'components/latest-news.scss';
 
 // footer
@@ -46,4 +48,3 @@ body {
 @import 'components/contacts.scss';
 
 @import 'components/socials.scss';
-
