--- a/beside/src/scss/components/event.scss
+++ b/beside/src/scss/components/event.scss
@@ -3,42 +3,52 @@
     border-top: none;
     padding-top: 15px;
     padding-bottom: 15px;
-    
+
     &__text-container {
         @include paddings;
         margin-bottom: 30px;
     }
-    
-//    till tomorrow
+
+    &__info {
+            padding-bottom: 20px;
+    }
+
     &__slider-container {
         width: 100%;
         height: 270px;
-        border: 1px solid red;
+        margin-bottom: 25px;
         margin-left: auto;
         margin-right: auto;
         box-sizing: border-box;
     }
-    
+
+    &__slider-text {
+        @include text-form;
+        color: $red;
+        font-weight: 700;
+        padding-left: 10px;
+    }
+
     &__header {
         @include text-form;
         margin-bottom: 0px;
     }
-    
+
     &__sub-header {
         @include text-form;
         text-transform: none;
         margin-top: 0px;
     }
-    
+
     &__text {
         margin-bottom: 30px;
     }
-    
+
     &__text-highlight {
         color: $red;
         font-weight: 700;
     }
-    
+
     &__contacts {
         @include paddings;
         padding-top: 15px;
@@ -47,7 +57,7 @@
         @include text-form;
         text-transform: none;
     }
-    
+
     &__contacts-phone,
     &__contacts-anchor,
     &__contacts-more {
@@ -56,19 +66,20 @@
         text-transform: none;
         text-decoration: none;
         color: $black;
-        
-        &:hover, 
+
+        &:hover,
         &:focus {
             color: $yellow;
             text-decoration: underline;
         }
     }
-    
+
     &__contacts-phone {
         display: inline-block;
     }
-       
-    &__contacts-btn {
+
+    &__contacts-btn,
+     &__slider-anchor {
         display: block;
         max-width: 130px;
         max-height: 36px;
@@ -80,18 +91,23 @@
         text-align: center;
         color: $black;
         background-color: transparent;
-        
+
         &:hover,
         &:focus {
             background-color: $yellow;
         }
     }
-    
+
+    &__slider-anchor {
+        max-width: 80px;
+        margin-left: 10px;
+    }
+
     &__contacts-socials {
         margin-top: 15px;
         margin-bottom: 15px;
         display: flex;
-        
+
         a {
             display: block;
             min-height: 40px;
@@ -101,17 +117,17 @@
             font-size: 0px;
             text-decoration: none;
             background-position-x: center;
-            
+
             &:nth-of-type(1) {
                 background-position-y: -109px;
             }
-            
+
             &:nth-last-of-type(1) {
                     background-position-y: -149px;
             }
         }
     }
-    
+
     &__contacts-img {
         width: 160px;
         height: 160px;
