--- a/beside/src/scss/components/positions.scss
+++ b/beside/src/scss/components/positions.scss
@@ -1,8 +1,9 @@
 .positions {
     &__header {
         @include text-form;
+        text-align: center;
     }
-    
+
     &__item-info {
         display: none;
         position: absolute;
@@ -15,12 +16,12 @@
         cursor: pointer;
         @include text-form;
         letter-spacing: 2px;
-        
+
         &:hover,
         &:focus {
             background-color: $yellow;
         }
-        
+
         &:after {
             content: '';
             display: block;
@@ -35,40 +36,43 @@
             background-position-y: -60px;
         }
     }
-    
+
     &__item {
         margin-bottom: 106px;
         position: relative;
-        
+        width: 266px;
+        margin-left: auto;
+        margin-right: auto;
+
         &:hover,
         &:focus {
             margin-bottom: 16px;
             border: 1px solid $gray-border;
-            
+
             .positions__item-info {
                 display: block;
             }
-            
+
             .positions__item-img {
                 border-top: none;
                 border-left: none;
                 border-right: none;
             }
         }
-        
+
         &:hover .positions__item-text-additional,
         &:hover .positions__item-anchor{
             display: block;
         }
     }
-    
-    
+
+
     &__item-text {
         display: block;
         margin-bottom: 15px;
         margin-left: 10px;
     }
-    
+
     &__item-img {
         box-sizing: border-box;
         width: 100%;
@@ -77,14 +81,14 @@
         margin-bottom: 20px;
         background-color: $gray-border;
     }
-    
+
     &__item-text-additional {
         display: none;
         color: $red;
         margin-bottom: 15px;
         margin-left: 10px;
     }
-    
+
     &__item-anchor {
         display: none;
         max-width: 93px;
@@ -97,11 +101,11 @@
         text-decoration: none;
         text-align: center;
         color: $black;
-        
+
         &:hover,
         &:focus {
             background-color: $yellow;
         }
     }
-    
+
 }
