--- a/beside/src/scss/components/event.scss
+++ b/beside/src/scss/components/event.scss
@@ -16,7 +16,7 @@
     &__slider-container {
         width: 100%;
         height: 270px;
-        margin-bottom: 25px;
+        margin-bottom: 115px;
         margin-left: auto;
         margin-right: auto;
         box-sizing: border-box;
@@ -101,6 +101,7 @@
     &__slider-anchor {
         max-width: 80px;
         margin-left: 10px;
+        margin-bottom: 30px;
     }
 
     &__contacts-socials {
@@ -132,5 +133,32 @@
         width: 160px;
         height: 160px;
         margin-bottom: 15px;
+    }
+}
+
+@media(min-width: 768px) {
+    .event {
+        display: flex;
+        padding-top: 0px;
+        padding-bottom: 0px;
+
+        &__info {
+            order: 2;
+            flex-basis: 290px;
+        }
+
+        &__slider-container {
+            flex-basis: 321px;
+            height: 235px;
+                padding-top: 15px;
+            // margin-right: 20px;
+        }
+
+        &__contacts {
+            order: 3;
+            flex-basis: 230px;
+            border-top: none;
+            border-left: 1px solid $gray-border;
+        }
     }
 }
