--- a/beside/src/scss/components/latest-news.scss
+++ b/beside/src/scss/components/latest-news.scss
@@ -58,3 +58,24 @@
         text-transform: none;
     }
 }
+
+@media(min-width: 768px) {
+    .latest-news {
+        &__inner {
+                border-bottom: none;
+        }
+
+        &__items-container {
+            flex-direction: row;
+            justify-content: space-between;
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+
+        &__item {
+            width: 161px;
+            height: 193px;
+            margin-left: 30px;
+        }
+    }
+}
