--- a/beside/src/scss/components/socials.scss
+++ b/beside/src/scss/components/socials.scss
@@ -2,7 +2,7 @@
     @include paddings;
     padding-top: 35px;
     padding-bottom: 25px;
-    
+
     &__header {
         font-family: $font-subheading;
         font-weight: 700;
@@ -10,37 +10,37 @@
         text-decoration: none;
         letter-spacing: 1px;
     }
-    
+
     &__list {
         margin: 0px;
         padding: 0px;
         list-style: none;
-        
+
         & li:first-child {
             a:before {
-                background-position-y: -112px; 
+                background-position-y: -112px;
             }
         }
-        
+
         & li:nth-of-type(2) {
             a:before {
-                background-position-y: -150px;  
+                background-position-y: -150px;
             }
         }
-        
+
         & li:nth-of-type(3) {
             a:before {
                 background-position-y: -192px;
             }
         }
-        
+
         & li:nth-last-of-type(1) {
             a:before {
                 background-position-y: -232px;
             }
         }
     }
-    
+
     &__list-item {
         font-family: $font-subheading;
         font-weight: 700;
@@ -53,13 +53,13 @@
         min-height: 30px;
         margin-bottom: 15px;
         position: relative;
-        
+
         &:hover,
         &:focus {
             color: $white;
             text-decoration: underline;
         }
-        
+
         &:before {
             content: '';
             display: block;
@@ -69,7 +69,16 @@
             background-image: url(../../img/icons-sprite.png);
             background-repeat: no-repeat;
             left: 7px;
-            top: -9px;  
+            top: -9px;
         }
-    }  
+    }
+}
+
+@media(min-width: 768px) {
+    .socials {
+        padding-top: 70px;
+        // border-right: 1px solid $gray-border;
+        flex-shrink: 1;
+        flex-basis: 200px;
+    }
 }
