--- a/beside/src/scss/components/welcome-slider.scss
+++ b/beside/src/scss/components/welcome-slider.scss
@@ -1,8 +1,7 @@
 .welcome-slider {
     position: relative;
-        height: 100%;
+    height: 100%;
 
-//    arrows
     &__prev,
     &__next {
         width: 91px;
@@ -47,8 +46,6 @@
         opacity: 0;
         transition: all 0.5s ease-in-out;
 
-        // background-color: aquamarine;
-
         img {
             max-width: 100%;
             height: auto;
@@ -81,5 +78,15 @@
         z-index: 3;
         opacity: 1;
     }
+}
 
+@media(min-width: 768px) {
+    .welcome-slider {
+        &__item-img {
+            width: 528px;
+            height: 426px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 }
