beside - 1024px-version ready

--- a/beside/src/scss/components/event-slider.scss
+++ b/beside/src/scss/components/event-slider.scss
@@ -120,3 +120,19 @@
         }
     }
 }
+
+@media(min-width: 1024px) {
+    .event-slider {
+        width: 350px;
+        height: 370px;
+
+        &__item-img {
+            width: 350px;
+        height: 349px;
+        }
+
+        &__next {
+            right: -20px;
+        }
+    }
+}
