--- a/beside/src/scss/components/latest-news.scss
+++ b/beside/src/scss/components/latest-news.scss
@@ -79,3 +79,11 @@
         }
     }
 }
+
+@media(min-width: 1024px) {
+    .latest-news {
+        &__item {
+            margin-right: 30px;
+        }
+    }
+}
