--- a/beside/src/scss/components/positions.scss
+++ b/beside/src/scss/components/positions.scss
@@ -109,3 +109,17 @@
     }
 
 }
+
+@media(min-width: 1024px) {
+    .positions {
+        &__header {
+            text-align: left;
+            padding-left: 30px;
+        }
+        
+        &__container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
+}
