beside - 1200 till infinity - first-ready

--- a/beside/src/scss/components/event-slider.scss
+++ b/beside/src/scss/components/event-slider.scss
@@ -136,3 +136,15 @@
         }
     }
 }
+
+@media(min-width: 1200px) {
+    .event-slider {
+        width: 450px;
+        height: 445px;
+
+        &__item-img {
+            width: 450px;
+            height: 430px;
+        }
+    }
+}
