--- a/beside/src/scss/components/page-main.scss
+++ b/beside/src/scss/components/page-main.scss
@@ -24,3 +24,13 @@
             }
     }
 }
+
+@media(min-width: 1200px) {
+    .page-main {
+            width: 1170px;
+
+            &__positions-wrapper {
+                flex-basis: 900px;
+            }
+    }
+}
