--- a/beside/src/scss/components/welcome-slider.scss
+++ b/beside/src/scss/components/welcome-slider.scss
@@ -104,3 +104,15 @@
         }
     }
 }
+
+@media(min-width: 1200px) {
+    .welcome-slider {
+        &__prev {
+                left: -484px;
+        }
+
+        &__next {
+                right: -122px;
+        }
+    }
+}
