beside - rewrite mob main-nav

--- a/beside/src/scss/components/page-header.scss
+++ b/beside/src/scss/components/page-header.scss
@@ -27,10 +27,10 @@
         }
     }
 
-    &__nav-toggler-wrapper {
-        position: relative;
-        font-family: sans-serif;
-    }
+    // &__nav-toggler-wrapper {
+    //     position: relative;
+    //     font-family: sans-serif;
+    // }
 }
 
 @media(min-width: 1200px) {
