--- a/beside/src/scss/style.scss
+++ b/beside/src/scss/style.scss
@@ -8,9 +8,7 @@ body {
 
 @import 'components/page-header.scss';
 
-@import 'components/main-nav_mob.scss';
-
-@import 'components/main-nav_desk.scss';
+@import 'components/main-nav.scss';
 
 @import 'components/login-form.scss';
 
