--- a/beside/src/scss/components/login-form.scss
+++ b/beside/src/scss/components/login-form.scss
@@ -3,7 +3,43 @@
     flex-direction: column;
     justify-content: center;
     padding-right: 15px;
-    
+    position: relative;
+
+    &__heart {
+        display: none;
+        position: absolute;
+        left: -19px;
+        bottom: 28px;
+        z-index: 15;
+        min-width: 30px;
+        min-height: 40px;
+        background-color: transparent;
+        border: none;
+        @include text-form;
+        line-height: 28px;
+        font-size: 18px;
+        color: $white;
+            text-align: right;
+
+        &:hover,
+        &:focus  {
+            color: $black;
+            text-decoration: none;
+        }
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            background-image: url(../../img/icons-sprite.png);
+            background-repeat: no-repeat;
+            width: 32px;
+            height: 30px;
+            left: -20px;
+            background-position-y: -68px;
+        }
+    }
+
     &__lang-switcher {
         @include text-form;
         background-color: transparent;
@@ -15,14 +51,14 @@
         padding-left: 10px;
         background-position-x: 3px;
         background-position-y: 14px;
-        
+
         &:hover,
         &:focus {
             color: $white;
             text-decoration: underline;
         }
     }
-    
+
     &__login-btn {
         @include text-form;
         background-color: transparent;
@@ -32,7 +68,7 @@
         padding-top: 25px;
         margin-bottom: 10px;
         position: relative;
-        
+
         &:before {
             content: '';
             display: block;
@@ -45,11 +81,27 @@
             background-repeat: no-repeat;
             background-position-y: -24px;
         }
-        
+
         &:hover,
         &:focus {
             color: $white;
             text-decoration: underline;
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    .login-form {
+        &__heart {
+            display: block;
+        }
+    }
+}
+
+@media(min-width: 1200px) {
+    .login-form {
+        &__heart {
+            left: -36px;
         }
     }
 }
