--- a/port/src/scss/components/pingbuller.scss
+++ b/port/src/scss/components/pingbuller.scss
@@ -1,19 +1,13 @@
 .pingbuller {
-    margin-bottom: 50px;
-    
+    @include margin-bottom;
+
     &__inner {
-        @include margin-sides;
         text-align: left;
-        padding-left: 10px;
-        padding-bottom: 50px;
-        color: $white;
-        background-color: #7778c6;
+        background-color: $pink;
         background-size: cover;
-        position: relative;
-        overflow: hidden;
-        @include container-shadow;
+        @include container;
     }
-    
+
     &__content-img {
         max-width: 100%;
         position: absolute;
@@ -21,45 +15,23 @@
         left: 0px;
         z-index: 0;
     }
-    
-    &__header {
-        margin-top: 0px;
-        margin-bottom: 20px;
-        padding-top: 30px;
-        font-size: 1.8em;
-    }
-    
-    &__text {
-        margin-bottom: 50px;
-        z-index: 1;
-        position: relative;
-        font-size: 1.2em;
-    }
-    
+
+    @include header;
+
+    @include content-text;
+
+    @include open-btn;
+
     &__button {
-        display: inline-block;
-        padding: 10px;
-        margin-bottom: 50px;
-        border: 2px solid $peach;
-        background-color: transparent;
-        color: $white;
-        font-size: 1em;
-        text-decoration: none;
-        
-        &:hover,
-        &:focus {
-            background-color: $peach;
-            color: $blue;
-        }
+        z-index: 2;
+        position: relative;
     }
 }
-
-//padding-left: 60px
 
 @media(min-width: 768px) {
     .pingbuller {
         flex-grow: 1;
-        
+
         &__inner {
             padding-left: 30px;
             margin-left: 0%;
@@ -69,10 +41,19 @@
     }
 }
 
-//@media(min-width: 1024px) {
-//    .pingbuller {
-//        &__inner {
-//            max-width: 404px;
-//        }
-//    }
-//}
+@media(min-width: 1024px) {
+   .pingbuller {
+       &__content-img {
+           width: 100%;
+           max-width: auto;
+       }
+   }
+}
+
+@media(min-width: 1200px) {
+   .pingbuller {
+       &__content-img {
+           top: 220px;
+       }
+   }
+}
