--- a/port/src/scss/style.scss
+++ b/port/src/scss/style.scss
@@ -18,12 +18,25 @@ body {
 
 @import 'components/main-nav.scss';
 
+//  main-part
+
+//  upper-container
+
 @import 'components/nakitel.scss';
 
 @import 'components/pingbuller.scss';
 
-@import 'components/contacts.scss';
+//  lower-container
 
+@import 'components/coffee.scss';
+
+@import 'components/sedona.scss';
+
+@import 'components/builder.scss';
+
+//  page-footer
+
+@import 'components/contacts.scss';
 
 @import 'components/page-footer.scss';
 
@@ -32,5 +45,19 @@ body {
         display: flex;
         padding-left: 7%;
         padding-right: 7%;
+    }
+
+    .container_three-items {
+            justify-content: space-between;
+    }
+}
+
+@media(min-width: 1200px) {
+    .container {
+        width: 1160px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
