--- a/helloapp/src/app/app.component.html
+++ b/helloapp/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="page-header">
   <h1> Список покупок </h1>
 </div>
@@ -36,3 +37,4 @@
     </tbody>
   </table>
 </div>
+<app-footer></app-footer>
