add article-model, add articles-array, add possibility to add new articles, add sorting, finish sample of reddit-clone, deploy to now

--- a/angular-reddit/src/app/app.component.html
+++ b/angular-reddit/src/app/app.component.html
@@ -15,3 +15,9 @@
     Submit link
   </button>
  </form>
+
+ <div class="ui grid posts">
+        <app-article 
+        *ngFor="let article of sortedArticles()"
+         [article]="article"></app-article>
+ </div>
