--- a/some/src/app/event-list/event-list.component.html
+++ b/some/src/app/event-list/event-list.component.html
@@ -1,15 +1,8 @@
 <div>
   <h1>Upcoming Angular 2 events</h1>
   <hr>
-  <div>
-    <h2>{{event.name}}</h2>
-    <p>Date: {{event.date}}</p>
-    <p>Time: {{event.time}}</p>
-    <p>Price: $ {{event.price}}</p>
-    <div>
-      <span> Location: {{event.location.address}}</span>
-      <span>&nbsp;</span>
-      <span>{{event.location.city}}, {{event.location.country}}</span>
-    </div>
-  </div>
+  <app-event-thumbnail 
+    [event]="event"
+    (eventClick)="handleEventClicked($event)">
+  </app-event-thumbnail>
 </div>
