add nav-component, add some styling, add some todo's for markup and style issues

--- a/some/src/app/event-list/event-list.component.html
+++ b/some/src/app/event-list/event-list.component.html
@@ -2,7 +2,6 @@
   <h1>Upcoming Angular 2 events</h1>
   <hr>
   <app-event-thumbnail 
-    [event]="event"
-    (eventClick)="handleEventClicked($event)">
+    [event]="event">
   </app-event-thumbnail>
 </div>
