--- a/some/src/app/event-thumbnail/event-thumbnail.component.css
+++ b/some/src/app/event-thumbnail/event-thumbnail.component.css
@@ -2,4 +2,13 @@
     border: 1px solid gray;
     padding: 20px;
     width: 350px;
+    background-color: #bbbbbb;
+}
+
+.thumbnail p {
+    color: darkblue;
+}
+
+.pad-left {
+    margin-left: 10px;
 }
