--- a/some/src/app/event-thumbnail/event-thumbnail.component.html
+++ b/some/src/app/event-thumbnail/event-thumbnail.component.html
@@ -5,8 +5,6 @@
   <p>Price: $ {{event.price}}</p>
   <div>
     <span> Location: {{event.location.address}}</span>
-    <span>&nbsp;</span>
-    <span>{{event.location.city}}, {{event.location.country}}</span>
+    <span class="pad-left">{{event.location.city}}, {{event.location.country}}</span>
   </div>
-  <button type="button" (click)="handleclickMe()">Click me!</button>
 </div>
