add events as an array, add ngFor, little markup-fixes to fit data

--- a/some/src/app/event-list/event-list.component.html
+++ b/some/src/app/event-list/event-list.component.html
@@ -2,6 +2,7 @@
   <h1>Upcoming Angular 2 events</h1>
   <hr>
   <app-event-thumbnail 
+    *ngFor="let event of events"
     [event]="event">
   </app-event-thumbnail>
 </div>
