learn how to add 3d party libs for angular app on jquery and toastr example, add service-wrapper around toastr

--- a/some/src/app/event-list/event-list.component.html
+++ b/some/src/app/event-list/event-list.component.html
@@ -3,6 +3,7 @@
   <hr>
   <app-event-thumbnail 
     *ngFor="let event of events"
-    [event]="event">
+    [event]="event"
+    (click)="handleThumbnailClick(event.name)">
   </app-event-thumbnail>
 </div>
