--- a/some/src/app/event-thumbnail/event-thumbnail.component.html
+++ b/some/src/app/event-thumbnail/event-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="thumbnail">
+<div [routerLink]="['/events', event.id]" class="thumbnail">
   <h2>{{event.name}}</h2>
   <p>Date: {{event.date}}</p>
   <p>Time: {{event.time}}</p>
