--- a/some/src/app/nav/nav.component.html
+++ b/some/src/app/nav/nav.component.html
@@ -1,9 +1,21 @@
-<h3>navbar-component, should refactor markup</h3>
+<nav>
+  <ul>
+    <li>
+      <a [routerLink]="['/events']">All events</a>
+    </li>
+    <li>
+      <a [routerLink]="['/events/new']">Create event</a>
+    </li>
+  </ul>
+</nav>
+
+
+<!-- <h3>navbar-component, should refactor markup</h3>
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand">ngEvents</a>
-    </div>
+    </div> -->
 
     <!-- <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -40,8 +52,8 @@
         </button>
       </form>
     </div> -->
-  </div>
-</div>
+  <!-- </div>
+</div> -->
 
 <!-- <simple-modal closeOnBodyClick="true" elementId="searchResults" title="Matching Sessions">
   <div class="list-group">
