add routing to app, add mockup for user-profile page, add activated and dictivated routes, add 404-page for events'id that didn't find, add nested routes for user-profile-module

--- a/some/src/app/nav/nav.component.html
+++ b/some/src/app/nav/nav.component.html
@@ -1,10 +1,16 @@
 <nav>
   <ul>
     <li>
-      <a [routerLink]="['/events']">All events</a>
+      <a [routerLink]="['/events']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact:true}">All events</a>
     </li>
     <li>
-      <a [routerLink]="['/events/new']">Create event</a>
+      <a [routerLink]="['/events/new']"
+             routerLinkActive="active">Create event</a>
+    </li>
+    <li style="float:right">
+      <a [routerLink]="['/user/profile']">John Dou</a>
     </li>
   </ul>
 </nav>
