update login form with validation, add edit-profile form with reactiveForms, add create-event form with advanced template-form

--- a/some/src/app/nav/nav.component.html
+++ b/some/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
     </li>
     <li style="float:right">
       <a *ngIf="!auth.isAuthenticated()" [routerLink]="['/user/login']">Login</a>
-      <a *ngIf="auth.isAuthenticated()" [routerLink]="['/user/profile']">Welcome {{auth._currentUser.firstName}}</a>
+      <a *ngIf="auth.isAuthenticated()" [routerLink]="['/user/profile']">Welcome {{auth.currentUser.firstName}} {{auth.currentUser.lastName}}</a>
     </li>
   </ul>
 </nav>
