--- a/some/src/app/user/login/login.component.html
+++ b/some/src/app/user/login/login.component.html
@@ -2,7 +2,6 @@
 <hr>
 <div class="col-md-4">
   <form autocomplete="off" #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" novalidate>
-  <!--<form autocomplete="off" (ngSubmit)="login(loginForm.value)" novalidate>-->
   <div class="form-group" >
       <label for="userName">User Name:</label>
       <em *ngIf="loginForm.controls.userName?.invalid && (loginForm.controls.userName?.touched || mouseoverLogin)">Required</em>
@@ -13,7 +12,10 @@
       <em *ngIf="loginForm.controls.password?.invalid && (loginForm.controls.password?.touched || mouseoverLogin)">Required</em>
       <input id="password" type="password" (ngModel)="password" name="password" required class="form-control"placeholder="Password..." />
     </div>
-    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false"><button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid" >Login</button></span>
+    <!-- btn wrapped in span, because disabled btn didn't fire events -->
+    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
+      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid" >Login</button>
+    </span>
     <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
   </form>
 </div>
