add collapsible component to study content-projection for session-list

--- a/some/src/app/event-details/session-list/session-list.component.html
+++ b/some/src/app/event-details/session-list/session-list.component.html
@@ -1,11 +1,16 @@
 <div class="row" *ngFor="let session of sessions">
   <div class="col-md-10">
-    <div class="well">
-      <h4>{{session.name}}</h4>
+    <app-collapsible-well>
+      <div well-title>
+        {{session.name}}
+        <span *ngIf="session.voters.length > 3" style="color: red;">fire</span>
+      </div>
+      <div well-body>
       <h6>{{session.presenter}}</h6>
       <span>Duration: {{session.duration}}</span><br />
       <span>Level: {{session.level}}</span>
       <p>{{session.abstract}}</p>
-    </div>
+      </div>
+    </app-collapsible-well>
   </div>
 </div>
