add filtering by level and sorting by name/voters to session list with high-performance

--- a/some/src/app/event-details/event-details.component.css
+++ b/some/src/app/event-details/event-details.component.css
@@ -1,8 +1,18 @@
-.container { 
-    padding-left:20px; 
+.container {
+    padding-left:20px;
     padding-right: 20px;
 }
 
-.event-image { 
-    height: 100px; 
+.event-image {
+    height: 100px;
+}
+
+.sessions-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.active {
+  border: 1px solid red;
 }
