add jquery-wrapper-service with injectableToken, add simple-modal component, add search-form for sessions-search, bind it together to show modal with search results, add bootstrap

--- a/some/src/app/event-list/event-list.component.html
+++ b/some/src/app/event-list/event-list.component.html
@@ -1,9 +1,8 @@
 <div>
   <h1>Upcoming Angular 2 events</h1>
   <hr>
-  <app-event-thumbnail 
+  <app-event-thumbnail
     *ngFor="let event of events"
-    [event]="event"
-    (click)="handleThumbnailClick(event.name)">
+    [event]="event">
   </app-event-thumbnail>
 </div>
